@startuml

title __STATIQUE's Class Diagram__\n

  namespace ch.heigvd.igjt.statique {
    class ch.heigvd.igjt.statique.Main {
    }
  }
  

  namespace ch.heigvd.igjt.statique {
    namespace data {
      class ch.heigvd.igjt.statique.data.ArticleContext {
      }
    }
  }
  

  namespace ch.heigvd.igjt.statique {
    namespace data {
      class ch.heigvd.igjt.statique.data.ArticleHeader {
      }
    }
  }
  

  namespace ch.heigvd.igjt.statique {
    namespace data {
      class ch.heigvd.igjt.statique.data.SiteConfig {
      }
    }
  }
  

  namespace ch.heigvd.igjt.statique {
    namespace modules {
      class ch.heigvd.igjt.statique.modules.ContentFileProcessor {
      }
    }
  }
  

  namespace ch.heigvd.igjt.statique {
    namespace modules {
      class ch.heigvd.igjt.statique.modules.FileWatcher {
      }
    }
  }
  

  namespace ch.heigvd.igjt.statique {
    namespace modules {
      class ch.heigvd.igjt.statique.modules.MarkdownProcessor {
      }
    }
  }
  

  namespace ch.heigvd.igjt.statique {
    namespace modules {
      class ch.heigvd.igjt.statique.modules.SiteBuilder {
      }
    }
  }
  

  namespace ch.heigvd.igjt.statique {
    namespace modules {
      class ch.heigvd.igjt.statique.modules.TemplateEngine {
      }
    }
  }
  

  namespace ch.heigvd.igjt.statique {
    namespace modules {
      class ch.heigvd.igjt.statique.modules.YamlProcessor {
      }
    }
  }
  

  namespace ch.heigvd.igjt.statique {
    namespace subcommands {
      class ch.heigvd.igjt.statique.subcommands.SubCommandBuild {
      }
    }
  }
  

  namespace ch.heigvd.igjt.statique {
    namespace subcommands {
      class ch.heigvd.igjt.statique.subcommands.SubCommandClean {
      }
    }
  }
  

  namespace ch.heigvd.igjt.statique {
    namespace subcommands {
      class ch.heigvd.igjt.statique.subcommands.SubCommandInit {
      }
    }
  }
  

  namespace ch.heigvd.igjt.statique {
    namespace subcommands {
      class ch.heigvd.igjt.statique.subcommands.SubCommandNew {
      }
    }
  }
  

  namespace ch.heigvd.igjt.statique {
    namespace subcommands {
      class ch.heigvd.igjt.statique.subcommands.SubCommandServe {
      }
    }
  }
  

  namespace ch.heigvd.igjt.statique {
    namespace subcommands {
      class ch.heigvd.igjt.statique.subcommands.SubCommandVersion {
      }
    }
  }
  

  ch.heigvd.igjt.statique.Main .up.|> java.util.concurrent.Callable
  ch.heigvd.igjt.statique.modules.ContentFileProcessor o-- ch.heigvd.igjt.statique.data.ArticleHeader : articleHeader
  ch.heigvd.igjt.statique.modules.FileWatcher o-- ch.heigvd.igjt.statique.modules.ContentFileProcessor : contentFileProcessor
  ch.heigvd.igjt.statique.modules.FileWatcher o-- ch.heigvd.igjt.statique.data.SiteConfig : siteConfig
  ch.heigvd.igjt.statique.modules.FileWatcher o-- ch.heigvd.igjt.statique.modules.TemplateEngine : templateEngine
  ch.heigvd.igjt.statique.modules.TemplateEngine o-- ch.heigvd.igjt.statique.data.SiteConfig : siteConfig
  ch.heigvd.igjt.statique.subcommands.SubCommandBuild .up.|> java.util.concurrent.Callable
  ch.heigvd.igjt.statique.subcommands.SubCommandClean .up.|> java.util.concurrent.Callable
  ch.heigvd.igjt.statique.subcommands.SubCommandInit .up.|> java.util.concurrent.Callable
  ch.heigvd.igjt.statique.subcommands.SubCommandNew .up.|> java.util.concurrent.Callable
  ch.heigvd.igjt.statique.subcommands.SubCommandServe .up.|> java.util.concurrent.Callable
  ch.heigvd.igjt.statique.subcommands.SubCommandVersion .up.|> java.util.concurrent.Callable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
